--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,5 +8,14 @@
     }
     body{
         width: 80%;
-        background-color:powderblue;
+        background-color:#E7F6F2;
+    }
+    h1{
+        color: #66BFBF;
+    }
+    h2{
+        color: #66BFBF;
+    }
+    h3{
+        color: #66BFBF;
     }
